<resources>
    <string name="app_name">Eventas</string>
    <string name="tvEmail">Email</string>
    <string name="edtEmail">Email</string>
    <string name="edtPassword">Password</string>
    <string name="btnLogin">Sign in</string>
    <string name="tvCreateAccount">¿No tienes cuenta?, Crea una aquí.</string>
    <string name="title_activity_container">ContainerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="userName">Guadalupe</string>
    <string name="defaultUser">Gerente General</string>
    <string name="productos">Productos</string>
    <string name="ventas">Ventas</string>
    <string name="inventario">Inventario</string>
    <string name="SignOut">Cerrar sesión</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Section">  sección</string>
</resources>
