<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/itemProductos"
            android:icon="@drawable/productos"
            android:title="@string/productos" />
        <item
            android:id="@+id/itemVentas"
            android:icon="@drawable/ventas"
            android:title="@string/ventas" />
        <item
            android:id="@+id/itemInventario"
            android:icon="@drawable/inventario"
            android:title="@string/inventario" />

    </group>

    <item android:title="Sesión">
        <menu>
            <item
                android:id="@+id/itemCerrarSesion"
                android:icon="@drawable/exit"
                android:title="@string/SignOut" />

        </menu>
    </item>

</menu>
